Change the behavior of Avro schemas codecs to use the defined Avro schema to get data, rather than iterate over the entire record. Fix Avro arrays which were only supporting arrays of strings previously.
Signed-off-by: David Venable <dlv@amazon.com>